--- a/examples/2-embeddings/coursera-lab.ipynb
+++ b/examples/2-embeddings/coursera-lab.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../../top_rated_wines.csv')\n",
+    "df = pd.read_csv('../../examples/banking datasets _canada.csv')\n",
     "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
     "data = df.to_dict('records')\n",
     "df"
@@ -55,7 +55,7 @@
    "source": [
     "# Create collection to store books\n",
     "qdrant.recreate_collection(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    vectors_config=models.VectorParams(\n",
     "        size=encoder.get_sentence_embedding_dimension(), # Vector size is defined by used model\n",
     "        distance=models.Distance.COSINE\n",
@@ -73,7 +73,7 @@
     "# vectorize!\n",
     "# Note that for Coursera we use an older way of Qdrant doing the uploads using Records instead of Points\n",
     "qdrant.upload_records(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    records=[\n",
     "        models.Record(\n",
     "            id=idx,\n",
@@ -94,8 +94,8 @@
     "# Search time for awesome wines!\n",
     "\n",
     "hits = qdrant.search(\n",
-    "    collection_name=\"top_wines\",\n",
-    "    query_vector=encoder.encode(\"A wine from Mendoza Argentina\").tolist(),\n",
+    "    collection_name=\"banking_open_gov\",\n",
+    "    query_vector=encoder.encode(\"A dataset relevant for the Superintendent of Financial Institutions\").tolist(),\n",
     "    limit=3\n",
     ")\n",
     "for hit in hits:\n",
