coursera_field_edited_embeddings

--- a/examples/2-embeddings/coursera-lab.ipynb
+++ b/examples/2-embeddings/coursera-lab.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('../../examples/banking datasets _canada.csv')\n",
-    "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
+    "df = df[df['title_translated_en'].notna()] # remove any NaN values as it blows up serialization\n",
     "data = df.to_dict('records')\n",
     "df"
    ]
