--- a/examples/3-applied-rag/embeddings.ipynb
+++ b/examples/3-applied-rag/embeddings.ipynb
@@ -33,9 +33,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../../top_rated_wines.csv')\n",
-    "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
-    "data = df.sample(700).to_dict('records') # Get only 700 records. More records will make it slower to index\n",
+    "df = pd.read_csv('../../examples/banking datasets_canada.csv')\n",
+    "df = df[df['title_translated_en'].notna()] # remove any NaN values as it blows up serialization\n",
+    "data = df.sample(200).to_dict('records') # Get only 700 records. More records will make it slower to index\n",
     "len(data)"
    ]
   },
@@ -80,7 +80,7 @@
    "source": [
     "# Create collection to store wines\n",
     "qdrant.recreate_collection(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    vectors_config=models.VectorParams(\n",
     "        size=encoder.get_sentence_embedding_dimension(), # Vector size is defined by used model\n",
     "        distance=models.Distance.COSINE\n",
@@ -97,7 +97,7 @@
    "source": [
     "# vectorize!\n",
     "qdrant.upload_points(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    points=[\n",
     "        models.PointStruct(\n",
     "            id=idx,\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_prompt = \"Suggest me an amazing Malbec wine from Argentina\""
+    "user_prompt = \"Suggest me a datasets I could use for the Superintendent of financial institutions in order to create a social media message.\""
    ]
   },
   {
@@ -128,7 +128,7 @@
     "# Search time for awesome wines!\n",
     "\n",
     "hits = qdrant.search(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    query_vector=encoder.encode(user_prompt).tolist(),\n",
     "    limit=3\n",
     ")\n",
@@ -163,7 +163,7 @@
     "completion = client.chat.completions.create(\n",
     "    model=\"LLaMA_CPP\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are chatbot, a wine specialist. Your top priority is to help guide users into selecting amazing wine and guide them with their requests.\"},\n",
+    "        {\"role\": \"system\", \"content\": \"You are chatbot, a social media specialist working in banking regulation. Your top priority is to help guide users into proposing social media messages for the Superintendent of financial institutions and guide them with their requests.\"},\n",
     "        {\"role\": \"user\", \"content\": \"Suggest me an amazing Malbec wine from Argentina\"},\n",
     "        {\"role\": \"assistant\", \"content\": str(search_results)}\n",
     "    ]\n",
