--- a/examples/2-embeddings/embeddings.ipynb
+++ b/examples/2-embeddings/embeddings.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../../top_rated_wines.csv')\n",
+    "df = pd.read_csv('../../examples/banking datasets_canada.csv')\n",
     "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
     "data = df.to_dict('records')\n",
     "df"
