embeddings_field_modified

--- a/examples/2-embeddings/embeddings.ipynb
+++ b/examples/2-embeddings/embeddings.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('../../examples/banking datasets_canada.csv')\n",
-    "df = df[df['variety'].notna()] # remove any NaN values as it blows up serialization\n",
+    "df = df[df['title_translated_en'].notna()] # remove any NaN values as it blows up serialization\n",
     "data = df.to_dict('records')\n",
     "df"
    ]
@@ -55,7 +55,7 @@
    "source": [
     "# Create collection to store books\n",
     "qdrant.recreate_collection(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    vectors_config=models.VectorParams(\n",
     "        size=encoder.get_sentence_embedding_dimension(), # Vector size is defined by used model\n",
     "        distance=models.Distance.COSINE\n",
@@ -72,7 +72,7 @@
    "source": [
     "# vectorize!\n",
     "qdrant.upload_points(\n",
-    "    collection_name=\"top_wines\",\n",
+    "    collection_name=\"banking_open_gov\",\n",
     "    points=[\n",
     "        models.PointStruct(\n",
     "            id=idx,\n",
@@ -93,8 +93,8 @@
     "# Search time for awesome wines!\n",
     "\n",
     "hits = qdrant.search(\n",
-    "    collection_name=\"top_wines\",\n",
-    "    query_vector=encoder.encode(\"A wine from Mendoza Argentina\").tolist(),\n",
+    "    collection_name=\"banking_open_gov\",\n",
+    "    query_vector=encoder.encode(\"A dataset relevant for the Superintendent of Financial Institutions\").tolist(),\n",
     "    limit=3\n",
     ")\n",
     "for hit in hits:\n",
